--- a/storybook/src/css/styles.css
+++ b/storybook/src/css/styles.css
@@ -1,7 +1,3 @@
-body {
-    margin: 0;
-    padding: 0;
-    font-family: sans-serif;
-    color: #000;
-    height: 100%;
+html, body {
+    overflow: auto;
 }
