style  update (#root prop added)

--- a/lib/airr-react.css
+++ b/lib/airr-react.css
@@ -10,7 +10,9 @@
     -moz-box-sizing: border-box;
     box-sizing: border-box;
 }
-
+#root {
+    height: 100%;
+}
 :after,
 :before {
     -webkit-box-sizing: border-box;
